added time_limit variable

--- a/Exercise Generator.ipynb
+++ b/Exercise Generator.ipynb
@@ -37,7 +37,8 @@
    ],
    "source": [
     "print(\"mace workout\")\n",
-    "mace = get_workout(mace_exercises,10, level_lower_bound=1, level_upper_bound=4)\n",
+    "time_limit = 10\n",    
+    "mace = get_workout(mace_exercises,time_limit, level_lower_bound=1, level_upper_bound=4)\n",
     "print_workout(mace,order_by_level=True, randomize_RL = True, reverse_RL=False)\n",
     "round_time = 1 # time in minutes\n",
     "print('total time:{}'.format(round_time* sum([e.count for e in mace])))"
@@ -72,7 +73,8 @@
    ],
    "source": [
     "print(\"club workout 1H\")\n",
-    "club_1h = get_workout(club_exercises_1h,12, level_lower_bound=1, level_upper_bound=4)\n",
+    "time_limit = 12\n",
+    "club_1h = get_workout(club_exercises_1h,time_limit, level_lower_bound=1, level_upper_bound=4)\n",
     "print_workout(club_1h,order_by_level=True, randomize_RL = True, reverse_RL=False)\n",
     "round_time = 1 # time in minutes\n",
     "print('total time:{}'.format(round_time* sum([e.count for e in club_1h])))"
@@ -104,7 +106,8 @@
    ],
    "source": [
     "print(\"club workout 2H\")\n",
-    "club_2h = get_workout(club_exercises_2h,10, level_lower_bound=1, level_upper_bound=4)\n",
+    "time_limit=10\n",
+    "club_2h = get_workout(club_exercises_2h,time_limit, level_lower_bound=1, level_upper_bound=4)\n",
     "print_workout(club_2h,order_by_level=True, randomize_RL = True, reverse_RL=False)\n",
     "round_time = 1 # time in minutes\n",
     "print('total time:{}'.format(round_time* sum([e.count for e in club_2h])))"
