Test commit from comp

--- a/Exercise Generator.ipynb
+++ b/Exercise Generator.ipynb
@@ -11,9 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -21,12 +21,29 @@
      "output_type": "stream",
      "text": [
       "generating mace workout\n",
-      "total time:0\n"
+      "level:1\tL - gamma cast\n",
+      "level:1\tR - gamma cast\n",
+      "\turl: https://www.youtube.com/watch?v=ccifkBh2JSI&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=3\n",
+      "level:2\tL - barbell transition to squat\n",
+      "level:2\tR - barbell transition to squat\n",
+      "\turl: https://www.youtube.com/watch?v=kZK8Eq6ka0U&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=14\n",
+      "level:2\tL - horizontal prayer transition to target squat\n",
+      "level:2\tR - horizontal prayer transition to target squat\n",
+      "\turl: https://www.youtube.com/watch?v=2yUz84zdBlk&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=13\n",
+      "level:3\talternating - paddle row to upper block with barbell transition to 360\n",
+      "\turl: https://www.youtube.com/watch?v=4or7Sb8HyaU&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=12\n",
+      "level:4\tL - single arm outside circle to alternate hand coin flip\n",
+      "level:4\tR - single arm outside circle to alternate hand coin flip\n",
+      "\turl: https://www.youtube.com/watch?v=qX0nE-3VMN0&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=20\n",
+      "level:4\tL - single arm outside continuous circle with alternate hand flip touching catch\n",
+      "level:4\tR - single arm outside continuous circle with alternate hand flip touching catch\n",
+      "\turl: https://www.youtube.com/watch?v=T5lfsHi1rDY&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=26\n",
+      "total time:11\n"
      ]
     }
    ],
    "source": [
-    "time_limit = 10 # number of exercises/variations you plan on doing, assumed to be 1 minute each\n",
+    "time_limit = 11 # number of exercises/variations you plan on doing, assumed to be 1 minute each\n",
     "level_lower_bound = 0 # lower complexity level\n",
     "level_upper_bound = 4 # upper complexity level, assumed to go to 10 (chosen by me, so not scientifically or anything)\n",
     "only_isolation = False # if true, only chooses L and R isloation exercises\n",
@@ -45,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -53,22 +70,26 @@
      "output_type": "stream",
      "text": [
       "generating 1h club workout\n",
-      "level:1\tR - inside circles\n",
-      "level:1\tL - inside circles\n",
-      "\turl: \n",
-      "level:1\tR - outside swing\n",
-      "level:1\tL - outside swing\n",
-      "\turl: \n",
-      "level:1\tR - alternating pullover\n",
-      "level:1\tL - alternating pullover\n",
-      "\turl: \n",
-      "level:1\tR - outside circles\n",
       "level:1\tL - outside circles\n",
+      "level:1\tR - outside circles\n",
       "\turl: \n",
-      "level:1\tR - pullover\n",
+      "level:1\tL - alternating pullover\n",
+      "level:1\tR - alternating pullover\n",
+      "\turl: \n",
       "level:1\tL - pullover\n",
+      "level:1\tR - pullover\n",
       "\turl: \n",
-      "total time:10\n"
+      "level:2\tL - inside mill\n",
+      "level:2\tR - inside mill\n",
+      "\turl: \n",
+      "level:2\tL - outside mill\n",
+      "level:2\tR - outside mill\n",
+      "\turl: \n",
+      "level:3\talternating - outside mill swing transition\n",
+      "\turl: \n",
+      "level:3\talternating - inside mill swing transition\n",
+      "\turl: \n",
+      "total time:12\n"
      ]
     }
    ],
@@ -80,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +109,22 @@
      "output_type": "stream",
      "text": [
       "generating 2h club workout\n",
-      "total time:0\n"
+      "level:2\tL - inside mill\n",
+      "level:2\tR - inside mill\n",
+      "\turl: \n",
+      "level:2\tL - outside mill\n",
+      "level:2\tR - outside mill\n",
+      "\turl: \n",
+      "level:3\tL - alternating mill circle transition\n",
+      "level:3\tR - alternating mill circle transition\n",
+      "\turl: \n",
+      "level:3\tL - alternating mill pendulum transition\n",
+      "level:3\tR - alternating mill pendulum transition\n",
+      "\turl: \n",
+      "level:3\tL - alternating mill pullover transition\n",
+      "level:3\tR - alternating mill pullover transition\n",
+      "\turl: \n",
+      "total time:10\n"
      ]
     }
    ],
@@ -108,21 +144,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
