added sandbag table generator

--- a/Exercise Generator.ipynb
+++ b/Exercise Generator.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -21,44 +21,32 @@
      "output_type": "stream",
      "text": [
       "generating mace workout\n",
-      "level:1\tL - gamma cast\n",
       "level:1\tR - gamma cast\n",
+      "level:1\tL - gamma cast\n",
       "\turl: https://www.youtube.com/watch?v=ccifkBh2JSI&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=3\n",
-      "level:1\talternating - barbell transition\n",
+      "level:2\talternating - barbell transition to 360\n",
       "\turl: https://www.youtube.com/watch?v=WQjHBHoC-MQ&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=4\n",
-      "level:2\tL - 90 degree pivot uppercut\n",
-      "level:2\tR - 90 degree pivot uppercut\n",
-      "\turl: https://www.youtube.com/watch?v=ULFal2-zDt0&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=7\n",
-      "level:2\tL - horizontal prayer transition to squat\n",
-      "level:2\tR - horizontal prayer transition to squat\n",
-      "\turl: https://www.youtube.com/watch?v=2yUz84zdBlk&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=13\n",
-      "level:2\tL - paddle row to upper block\n",
-      "level:2\tR - paddle row to upper block\n",
-      "\turl: https://www.youtube.com/watch?v=4or7Sb8HyaU&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=12\n",
-      "level:2\tL - horizontal prayer transition to target squat\n",
       "level:2\tR - horizontal prayer transition to target squat\n",
+      "level:2\tL - horizontal prayer transition to target squat\n",
       "\turl: https://www.youtube.com/watch?v=2yUz84zdBlk&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=13\n",
-      "level:2\tL - inverted side-to-side swings\n",
       "level:2\tR - inverted side-to-side swings\n",
+      "level:2\tL - inverted side-to-side swings\n",
       "\turl: https://www.youtube.com/watch?v=bLA2KSghSdc&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=8\n",
-      "level:2\talternating - prayer transition to 360\n",
-      "\turl: https://www.youtube.com/watch?v=0fjn0vidH2M&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=5\n",
-      "level:3\talternating - barbell transition to squat to 360\n",
+      "level:2\tR - single arm alternating circles\n",
+      "level:2\tL - single arm alternating circles\n",
+      "\turl: https://www.youtube.com/watch?v=XWIFyifqSr8&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=18\n",
+      "level:2\tR - barbell transition to target squat\n",
+      "level:2\tL - barbell transition to target squat\n",
       "\turl: https://www.youtube.com/watch?v=kZK8Eq6ka0U&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=14\n",
-      "level:3\tL - symmetrical stance front circles\n",
-      "level:3\tR - symmetrical stance front circles\n",
-      "\turl: https://www.youtube.com/watch?v=ULozVN0nz_U&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=31\n",
-      "level:3\talternating - low block spin with prayer transition to 360\n",
-      "\turl: https://www.youtube.com/watch?v=GXMSVSDtJVc&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=10\n",
-      "level:4\tL - single arm outside circle to alternate hand coin flip\n",
-      "level:4\tR - single arm outside circle to alternate hand coin flip\n",
-      "\turl: https://www.youtube.com/watch?v=qX0nE-3VMN0&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=20\n",
-      "total time:20\n"
+      "level:4\tR - single arm inside continuous circle with alternate hand nunchuck flip\n",
+      "level:4\tL - single arm inside continuous circle with alternate hand nunchuck flip\n",
+      "\turl: https://www.youtube.com/watch?v=rCgrNJLsrBM&list=PLk4oYPJ7TXKh050XTrfVFjPtDSeqYCfsh&index=25\n",
+      "total time:13\n"
      ]
     }
    ],
    "source": [
-    "time_limit = 20          # number of exercises/variations you plan on doing, assumed to be 1 minute each\n",
+    "time_limit = 12          # number of exercises/variations you plan on doing, assumed to be 1 minute each\n",
     "level_lower_bound = 0    # lower complexity level\n",
     "level_upper_bound = 4    # upper complexity level, assumed to go to 10 (chosen by me, so not scientifically or anything)\n",
     "only_isolation = False   # if true, only chooses L and R isloation exercises\n",
@@ -177,6 +165,55 @@
     "                only_isolation=only_isolation, only_alternating=only_alternating, order_by_level=order_by_level, \n",
     "                     randomize_RL = randomize_RL, reverse_RL=reverse_RL, print_urls=print_urls)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sandbag rountine for 140 lb person at 0.25 percent sand weight of 35.0 lbs\n",
+      "Total Min\tDelay(s)\tReps\n",
+      "3\t\t10\t\t18\n",
+      "4\t\t10\t\t24\n",
+      "5\t\t10\t\t30\n",
+      "6\t\t10\t\t36\n",
+      "7\t\t10\t\t42\n",
+      "8\t\t10\t\t48\n",
+      "9\t\t10\t\t54\n",
+      "10\t\t9\t\t66\n",
+      "10\t\t8\t\t75\n",
+      "10\t\t7\t\t85\n",
+      "10\t\t6\t\t100\n"
+     ]
+    }
+   ],
+   "source": [
+    "body_weight_lbs = 140\n",
+    "percent_weight_sandbag = 0.25\n",
+    "generate_sandbag_table(140,0.25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[9, 8, 7, 6]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
